# ChangeLog for dev-embedded/gnap
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/gnap/ChangeLog,v 1.13 2012/03/18 19:19:12 pacho Exp $

  18 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #391429.

  25 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org> -gnap-1.6.ebuild,
  -gnap-1.7.ebuild, -gnap-1.7.1.ebuild, -gnap-1.8.ebuild,
  -gnap-1.8.1.ebuild, -gnap-1.8.2.ebuild:
  clean out old ebuilds per bass

  14 Jul 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Assigning dev-embedded/gnap to m-needed, as koon retired (#45804).

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*gnap-2.0 (21 Apr 2006)

  21 Apr 2006; Thierry Carrez <koon@gentoo.org> +gnap-2.0.ebuild:
  New version, 2.0

*gnap-1.8.2 (21 Oct 2005)

  21 Oct 2005; Thierry Carrez <koon@gentoo.org> +gnap-1.8.2.ebuild:
  New version, 1.8.2

*gnap-1.8.1 (31 Aug 2005)

  31 Aug 2005; Thierry Carrez <koon@gentoo.org> +gnap-1.8.1.ebuild:
  New version 1.8.1

*gnap-1.8 (10 Aug 2005)

  10 Aug 2005; Thierry Carrez <koon@gentoo.org> +gnap-1.8.ebuild:
  New version 1.8

*gnap-1.7.1 (23 Jun 2005)

  23 Jun 2005; Thierry Carrez <koon@gentoo.org> -gnap-1.5.1.ebuild, +gnap-1.7.1.ebuild:
  Version bump.

*gnap-1.7 (31 May 2005)

  31 May 2005; Thierry Carrez <koon@gentoo.org> +gnap-1.7.ebuild:
  Bump to version 1.7

*gnap-1.6 (17 May 2005)

  17 May 2005; Thierry Carrez <koon@gentoo.org> +gnap-1.6.ebuild:
  New release

*gnap-1.5.1 (25 Apr 2005)

  25 Apr 2005; Thierry Carrez <koon@gentoo.org> +gnap-1.5.1.ebuild +metadata.xml :
  Initial import.