@@ -1,6 +1,11 @@
 # ChangeLog for dev-embedded/gnap
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/gnap/ChangeLog,v 1.13 2012/03/18 19:19:12 pacho Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/gnap/ChangeLog,v 1.14 2013/09/15 23:14:29 chithanh Exp $
+
+  15 Sep 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  gnap-2.0.ebuild:
+  Relax syslinux dependency, bug #184532. Fix quoting to address repoman
+  warning.
 
   18 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer due retirement, bug #391429.
